# integrity-faker

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_scenario_smoke.py  run_smoke.py  setup.cfg
datafaker/: cli.py  generator.py  notes.txt
datafaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: config.yaml  hr_config.yaml  medical_config.yaml  sales_config.yaml  scenario_config.yaml  scenario_healthcare.yaml  scenario_sales.yaml  scenario_support.yaml  stress_test_config.yaml  stress_test_scenario_config.yaml
scenariofaker/: __init__.py  cli.py  generator.py
scripts/sanity_checks/: sanity_datafaker.py  sanity_scenariofaker.py
src/datafaker/: __init__.py  cli.py  generator.py
src/datafaker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fakercore/: __init__.py  base.py  cli_base.py
src/scenariofaker/: _scenarios.py  _time_profile.py  cli.py  generator.py
tests/: test_generator.py  test_scenario_generator.py
